--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,12 +23,14 @@ services:
     command: >
       sh -c "
             python manage.py makemigrations &&
-            python3 manage.py migrate &&
+            python manage.py migrate --run-syncdb &&
             gunicorn --bind 0.0.0.0:8000 endpoint.wsgi"
     ports:
       - "8000:8000"
     networks:
       - webnet
+    volumes:
+      - ./endpoint:/app
     restart: on-failure
 
   redis:
